# genai-in-practice

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
_shared/: config.py  llm_client.py  utils.py
rag-series/01-rag-foundations/: README.md
rag-series/01-rag-foundations/data/: accounts.md  cards.md  compliance.md  transfers.md
rag-series/01-rag-foundations/notebooks/: 01_rag_foundations.ipynb
rag-series/01-rag-foundations/src/: chunker.py  embedder.py  generator.py  pipeline.py  qdrant_store.py  retriever.py  vector_store.py
