# UV-managed project
# Install UV: https://docs.astral.sh/uv/getting-started/installation/
# Commands:
#   uv sync              - install all deps into .venv
#   uv sync --extra dev  - install dev deps too
#   uv run python -m src.pipeline

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-in-practice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.2.0",
    "numpy>=1.26.0",
    "qdrant-client>=1.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
